# BookManagement.API/Models/Account.cs
@@ -2,14 +2,14 @@
 
 namespace BookManagement.API.Models
 {
-    public class Register
+    public class Account
     {
         public int Id { get; set; }
 
         [Required]
         public string Name { get; set; }
 
-        [Range(0, 60)]
+        [Range(0, maximum: 200)]
         public int Age { get; set; }
     }
 }
