# Document/api_document.yml
@@ -124,17 +124,17 @@ paths:
               schema:
                 type: array
                 items:
-                  "$ref": "#/components/schemas/Register"
+                  "$ref": "#/components/schemas/Account"
             application/json:
               schema:
                 type: array
                 items:
-                  "$ref": "#/components/schemas/Register"
+                  "$ref": "#/components/schemas/Account"
             text/json:
               schema:
                 type: array
                 items:
-                  "$ref": "#/components/schemas/Register"
+                  "$ref": "#/components/schemas/Account"
     post:
       tags:
       - BookRegist
@@ -142,13 +142,13 @@ paths:
         content:
           application/json:
             schema:
-              "$ref": "#/components/schemas/Register"
+              "$ref": "#/components/schemas/Account"
           text/json:
             schema:
-              "$ref": "#/components/schemas/Register"
+              "$ref": "#/components/schemas/Account"
           application/*+json:
             schema:
-              "$ref": "#/components/schemas/Register"
+              "$ref": "#/components/schemas/Account"
       responses:
         '200':
           description: Success
@@ -159,13 +159,13 @@ paths:
         content:
           application/json:
             schema:
-              "$ref": "#/components/schemas/Register"
+              "$ref": "#/components/schemas/Account"
           text/json:
             schema:
-              "$ref": "#/components/schemas/Register"
+              "$ref": "#/components/schemas/Account"
           application/*+json:
             schema:
-              "$ref": "#/components/schemas/Register"
+              "$ref": "#/components/schemas/Account"
       responses:
         '200':
           description: Success
@@ -186,13 +186,13 @@ paths:
           content:
             text/plain:
               schema:
-                "$ref": "#/components/schemas/Register"
+                "$ref": "#/components/schemas/Account"
             application/json:
               schema:
-                "$ref": "#/components/schemas/Register"
+                "$ref": "#/components/schemas/Account"
             text/json:
               schema:
-                "$ref": "#/components/schemas/Register"
+                "$ref": "#/components/schemas/Account"
   "/api/BookRegist/id":
     delete:
       tags:
@@ -217,11 +217,11 @@ components:
         title:
           type: string
           nullable: true
-        registerId:
+        AccountId:
           type: integer
           format: int32
       additionalProperties: false
-    Register:
+    Account:
       required:
       - name
       type: object
